--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "email": "iyyhot@163.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php":">=7.4.0",
         "ext-json": "*",
