--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,10 @@
             "email": "iyyhot@163.com"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
         "php":">=7.4.0",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "~6.0",
+        "guzzlehttp/guzzle": "～6.0",
         "ext-openssl": "*"
     }
 }
