--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php":">=7.4.0",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "～6.0",
+        "guzzlehttp/guzzle": "~6.0",
         "ext-openssl": "*"
     }
 }
